--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.13",
+    "gulp-less": "^3.3.0",
     "gulp-uglifyjs": "^0.6.2"
   }
 }
