--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "gulp-less": "^3.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-uglifyjs": "^0.6.2"
+  },
+  "dependencies": {
+    "ejs": "^2.5.3",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0"
   }
 }
