--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.13",
+    "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-uglifyjs": "^0.6.2"
