--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/xrocketmanx/quiz-ninja#readme",
   "devDependencies": {
-    "body-parser": "^1.15.2",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.13",
@@ -30,6 +29,7 @@
   "dependencies": {
     "ejs": "^2.5.3",
     "express": "^4.14.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "body-parser": "^1.15.2"
   }
 }
