add progress-bar showed after quiz end

--- a/public/scripts/config.json
+++ b/public/scripts/config.json
@@ -6,6 +6,7 @@
       "common/error-provider.js",
       "components/quiz-utility.js",
       "components/error-notifier.js",
+      "components/progress-bar.js",
       "modules/quiz.js"
     ]
   },
